--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ body {
         margin-right: 8px;
         border-radius: 2px;
         background-color: #f2f2f2;
+
+        display: none;
     }
 
     #menuList {
@@ -264,6 +266,7 @@ body {
         margin-bottom: 8px;
     }
 }
+
 
 
 
