--- a/style.css
+++ b/style.css
@@ -46,8 +46,6 @@ body {
         margin-right: 8px;
         border-radius: 2px;
         background-color: #f2f2f2;
-
-        display: none;
     }
 
     #menuList {
@@ -55,7 +53,7 @@ body {
     }
     
     nav ul {    
-         width: 96%;
+        width: 96%;
         height: 96vh;
         margin: 0 auto;
         flex-flow: column;
@@ -245,6 +243,10 @@ body {
         flex-flow: column;
     }
 
+    .menu {
+         display: none;
+    }
+    
     .picture {
         width: 100%;
         height: 56vh;
@@ -266,6 +268,7 @@ body {
         margin-bottom: 8px;
     }
 }
+
 
 
 
