--- a/style.css
+++ b/style.css
@@ -229,12 +229,11 @@ body {
     }
 
     h1, h2, h3 {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Playfair Display', serif;
     }
     body, p, a {
-      font-family: 'Lora', serif;
+      font-family: 'Inter', sans-serif;
     }
-
 }
 
 @media screen and (max-width: 786px) {
@@ -268,6 +267,7 @@ body {
         margin-bottom: 8px;
     }
 }
+
 
 
 
