--- a/style.css
+++ b/style.css
@@ -229,10 +229,10 @@ body {
     }
 
     h1, h2, h3 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Poppins', sans-serif;
     }
     body, p, a {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Roboto', sans-serif;
     }
 }
 
@@ -267,6 +267,7 @@ body {
         margin-bottom: 8px;
     }
 }
+
 
 
 
